cambio formulario rojo

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     background-color: lightblue;
 }
 form {
-    background-color: green  ; /* White background for form */
+    background-color: red  ; /* White background for form */
     padding: 20px;
     text-align: center;
 }
